Buttonsdir=${HOME}/.fcitx/handwrite/Buttons
Buttons_DATA = !,0001.png B0002.png G0001.png S0002.png Y0001.png	\
	!,0002.png C0001.png G0002.png N0001.png select.png Y0002.png	\
	110001.png   C0002.png      H0001.png     N0002.png           SHIT0001.png   Z0001.png	\
	110002.png   ch1.png        H0002.png     null.png            SHIT0002.png   Z0002.png	\
	1230001.png  ch2.png        HAND0001.png  O0001.png           space0001.png  键盘坐标.png	\
	1230002.png  close0001.png  HAND0002.png  O0002.png           space0002.png  拼音0001.png	\
	1.png        close0002.png  hand.png      P0001.png           T0001.png      拼音0002.png	\
	2.png        D0001.png      I0001.png     P0002.png           T0002.png      声调0001.png	\
	A0001.png    D0002.png      I0002.png     Q0001.png           U0001.png      声调0002.png	\
	A0002.png    DEL0001.png    J0001.png     Q0002.png           U0002.png      五笔0001.png	\
	AA0001.png   DEL0002.png    J0002.png     R0001.png           unselect.png   五笔0002.png	\
	AA0002.png   E0001.png      K0001.png     R0002.png           V0001.png      小写0001.png	\
	ABC0001.png  E0002.png      K0002.png     remove_normal1.png  V0002.png      小写0002.png	\
	ABC0002.png  ENTER0001.png  L0001.png     remove_normal.png   W0001.png	\
	arrow1.png   ENTER0002.png  L0002.png     remove_notify1.png  W0002.png	\
	arrow2.png   F0001.png      M0001.png     remove_notify.png   X0001.png	\
	B0001.png    F0002.png      M0002.png     S0001.png           X0002.png
EXTRA_DIST=${Buttons_DATA}
